# QLN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mingw32_launch.bat
include/: setup.hpp
lib/fftw/: CMakeLists.txt
src/: main.cpp
